--- a/gentoo_config/make.conf
+++ b/gentoo_config/make.conf
@@ -11,11 +11,11 @@ USE="X alsa ccache chardet ipv6 bash-completion dbus bzip2 cdr dvd dvdr bizp2 ac
 #############################MIRRORS FOR GENTOO
 #GENTOO_MIRRORS="http://mirrors.sohu.com/gentooo/"
 #GENTOO_MIRRORS="http://mirrors.xmu.edu.cn/gentoo/ http://mirrors.sohu.com/gentoo/ http://mirrors.bjtu.edu.cn/gentoo/"
-GENTOO_MIRRORS="http://mirror6.bjtu.edu.cn/gentoo/"
-#GENTOO_MIRRORS="http://mirrors.xmu6.edu.cn/gentoo/ http://mirror6.bjtu.edu.cn/gentoo/ http://mirrors.sohu.com/gentoo/"
+#GENTOO_MIRRORS="http://mirror6.bjtu.edu.cn/gentoo/"
+GENTOO_MIRRORS="http://mirrors.xmu6.edu.cn/gentoo/ http://mirror6.bjtu.edu.cn/gentoo/ http://mirrors.sohu.com/gentoo/"
 #SYNC="rsync://mirror.bjtu.edu.cn/gentoo-portage"
-#SYNC="rsync://mirrors.xmu6.edu.cn/gentoo-portage"
-SYNC="rsync://mirror6.bjtu.edu.cn/gentoo-portage"
+SYNC="rsync://mirrors.xmu6.edu.cn/gentoo-portage"
+#SYNC="rsync://mirror6.bjtu.edu.cn/gentoo-portage"
 #SYNC="rsync://mirrors.163.com/gentoo-portage"
 #############################PORTAGE OPTIONS
 CLEAN_DELAY=3
