--- a/gentoo_config/make.conf
+++ b/gentoo_config/make.conf
@@ -11,12 +11,12 @@ USE="X alsa ccache chardet ipv6 bash-completion dbus bzip2 cdr dvd dvdr bizp2 ac
 #############################MIRRORS FOR GENTOO
 #GENTOO_MIRRORS="http://mirrors.sohu.com/gentooo/"
 #GENTOO_MIRRORS="http://mirrors.xmu.edu.cn/gentoo/ http://mirrors.sohu.com/gentoo/ http://mirrors.bjtu.edu.cn/gentoo/"
-GENTOO_MIRRORS="http://mirror6.bjtu.edu.cn/gentoo/ http://mirror6.bjtu.edu.cn/gentoo/ http://mirrors.sohu.com/gentoo/"
-#GENTOO_MIRRORS="http://mirror6.bjtu.edu.cn/gentoo/"
+#GENTOO_MIRRORS="http://mirror6.bjtu.edu.cn/gentoo/ http://mirror6.bjtu.edu.cn/gentoo/ http://mirrors.sohu.com/gentoo/"
+GENTOO_MIRRORS="http://mirrors.ustc.edu.cn/gentoo/"
 #GENTOO_MIRRORS="http://mirrors.xmu6.edu.cn/gentoo/ http://mirror6.bjtu.edu.cn/gentoo/ http://mirrors.sohu.com/gentoo/"
 #SYNC="rsync://mirror.bjtu.edu.cn/gentoo-portage"
 #SYNC="rsync://mirrors.xmu6.edu.cn/gentoo-portage"
-SYNC="rsync://mirror6.bjtu.edu.cn/gentoo-portage"
+SYNC="rsync://mirrors.ustc.edu.cn/gentoo-portage"
 #SYNC="rsync://mirrors.163.com/gentoo-portage"
 #############################PORTAGE OPTIONS
 CLEAN_DELAY=3
@@ -27,8 +27,8 @@ PORTAGE_ELOG_SYSTEM="save"
 PORTDIR_OVERLAY="/usr/local/portage/overlay"
 source "/var/lib/layman/make.conf"
 #############################CHINESE SUPPORT
-LANGUAGE="zh_CN.UTF-8:zh_CN:zh_CN.GBK:en_US:en_US.UTF-8"
-LINGUAS="zh_CN zh"
+LANGUAGE="en_US:en_US.UTF-8:zh_CN.UTF-8:zh_CN"
+LINGUAS="en zh_CN zh"
 #############################HARDWARE
 VIDEO_CARDS="nvidia fbdev"
 INPUT_DEVICE="evdev keyboard mouse"
@@ -36,4 +36,4 @@ ALSA_CARDS="hda-intel"
 #############################OPTIONS FOR CCACHE
 CCACHE_DIR="/var/tmp/ccache"
 CCACHE_SIZE="20G"
-#PORTAGE_NICENESS=15
+PORTAGE_NICENESS=15
