--- a/gentoo_config/make.conf
+++ b/gentoo_config/make.conf
@@ -36,4 +36,4 @@ ALSA_CARDS="hda-intel"
 #############################OPTIONS FOR CCACHE
 CCACHE_DIR="/var/tmp/ccache"
 CCACHE_SIZE="20G"
-PORTAGE_NICENESS=15
+#PORTAGE_NICENESS=15
